# CoreNet

./: .gitignore  Anchor.toml  README.md  package.json
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src/idl/: corenet.json
daemon/: package-lock.json  package.json  tsconfig.json
daemon/src/: index.ts
programs/corenet/: Cargo.toml
programs/corenet/src/: errors.rs  lib.rs
programs/corenet/src/instructions/: accept_job.rs  cancel_job.rs  complete_job.rs  deregister_node.rs  initialize.rs  mod.rs  register_node.rs  submit_job.rs
programs/corenet/src/state/: mod.rs
