[package]
name = "corenet"
version = "0.1.0"
description = "CoreNet - Distributed Computing Network on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "corenet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.1"
